# vox-net

./: Cargo.toml  LICENSE  README.md
assets/data/: block_texture_config.ron
assets/shaders/: instancing.wgsl  line_instancing.wgsl  old_custom_material.wgsl
crates/prism_math/: Cargo.toml
crates/prism_math/src/: lib.rs  util.rs
src/: main.rs
src/old/: old_chunk_mat.rs  old_chunk_material.rs  old_chunk_pipeline.rs
src/rendering/: mesh.rs  mod.rs  model_draw_pipeline.rs
src/rendering/instancing/: mod.rs
src/voxel/: layers.rs  mod.rs  volume.rs  voxel.rs
